# jingmusee_sdk_demo

./: CMakeLists.txt  main.cpp
SDK/: BuildLog.htm  I8H_SDK.lib  I8_PlaySDK.h  I8_PlaySDK.lib  README  TalkDemo.res  i8_codec.lib  log.cfg  mt.dep  vc140.idb
SDK/TalkDemo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TalkDemo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
inc/: I8H_SDK.h  I8_PlaySDK.h  ants_g711.h
